--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="wrapper">
 <h2 class="question">You like me?</h2>
 <img class="gif" alt="gif"
-src="https://github.com/anstrea/anstrea.github.io/blob/main/heart-bunny-kiss.gif">
+src="https://raw.githubusercontent.com/anstrea/anstrea.github.io/main/heart-bunny-kiss.gif">
 <div class="btn-group"> <button class="yes-btn">Yes</button> <button class="no-
 btn">No</button>
 </div>
