--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
       <h2 class="question">You like me?</h2>
       <img class="gif" alt="gif"
 src="https://raw.githubusercontent.com/anstrea/anstrea.github.io/main/heart-bunny-kiss.gif">
-      <div class="btn-group"> <button class="yes-btn">Yes</button> <button class="no-
-btn">No</button>
+      <div class="btn-group"> <button class="yes-btn">Yes</button> <button class="no-btn">No</button>
       </div>
     </div>
     <script src="script.js"></script>
