--- a/Respon/Skibidi 1/index.html
+++ b/Respon/Skibidi 1/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AskForYou</title>
+    <title>Untuk Kak Devi lagii??</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
