--- a/Respon/Skibidi 1/index.html
+++ b/Respon/Skibidi 1/index.html
@@ -1,14 +1,14 @@
-<!doctype html>
+Bang!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Untuk Kak Devi lagii??</title>
+    <title>Untuk Bang Yann??</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="wrapper">
-      <h2 class="question">Hello Kak Devinaa</h2>
+      <h2 class="question">Hello Bang Yann</h2>
       <img class="gif" alt="gif"
 src="https://raw.githubusercontent.com/anstrea/anstrea.github.io/main/Respon/Skibidi%201/penguin-hello.gif">
       <div class="btn-group"> <button class="next-btn">Next</button>
