--- a/Respon/Skibidi 1/index.html
+++ b/Respon/Skibidi 1/index.html
@@ -8,7 +8,7 @@ Bang!doctype html>
   </head>
   <body>
     <div class="wrapper">
-      <h2 class="question">Hello Bang Yann</h2>
+      <h2 class="question">Hello Bang Yan</h2>
       <img class="gif" alt="gif"
 src="https://raw.githubusercontent.com/anstrea/anstrea.github.io/main/Respon/Skibidi%201/penguin-hello.gif">
       <div class="btn-group"> <button class="next-btn">Next</button>
