--- a/Respon/Skibidi 1/index.html
+++ b/Respon/Skibidi 1/index.html
@@ -10,7 +10,7 @@
   <div class="wrapper">
     <h2 class="question">Hello bang qil</h2>
     <img class="gif" alt="gif"
-src="https://raw.githubusercontent.com/anstrea/anstrea.github.io/main/Respon/Skibidi%201/penguin-hello.gif">
+src="https://media1.tenor.com/m/duGh7BkKc3gAAAAC/bumble-bee-sus.gif">
     <div class="btn-group"> <button class="next-btn">Next</button>
     </div>
   </div>
