--- a/Respon/Skibidi 1/index.html
+++ b/Respon/Skibidi 1/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="wrapper">
-    <h2 class="question">Hello bang qil</h2>
+    <h2 class="question">Hello bang lip</h2>
     <img class="gif" alt="gif"
 src="https://media1.tenor.com/m/duGh7BkKc3gAAAAC/bumble-bee-sus.gif">
     <div class="btn-group"> <button class="next-btn">Next</button>
