--- a/Respon/Skibidi 1/toilet/index.html
+++ b/Respon/Skibidi 1/toilet/index.html
@@ -53,8 +53,8 @@
 <body>
 
     <div class="message-box">
-        <h1>Hello!</h1>
-        <p>This is a message for you.</p>
+        <h1>welcome</h1>
+        <p>punk 5 skibidi</p>
         <div class="button-container">
             <button class="button" onclick="showAlert()">Click Me</button>
         </div>
